--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -477,6 +477,7 @@
         }
 
         //reset validation message 'Assistenten är redan vald' where relevant
+        var items = document.getElementsByClassName('selecteditem');
         var startIdx = items.length - 2;
         var k = 0;
         var sameSubAssFound = false;
