--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -9,6 +9,24 @@
     </div>
     <br />
     <br />
+
+    @if (TempData["PdfSuccess"] != null)
+    {
+    <div class="Event alert alert-success" id="PdfEventOmbud">
+        <h3>
+            @TempData["PdfSuccess"]
+        </h3>
+    </div>
+    }
+    @if (TempData["PdfFail"] != null)
+    {
+    <div class="Event alert alert-danger" id="PdfEventOmbud">
+        <h3>
+            @TempData["PdfFail"]
+        </h3>
+    </div>
+    }
+
     <div class="row">
         @if (Model.AssistantsExist)
         {
@@ -125,7 +143,7 @@
             }
         </div>
     </div>
-  
+
     <hr class="claim-divider" />
     <div class="row">
         <div class="col">
@@ -158,8 +176,8 @@
                             Sista sjukdag
                         </th>
                         @*<th class="ssmall-col-ombud">
-            Antal sjukdagar
-        </th>*@
+                                Antal sjukdagar
+                            </th>*@
                         <th class="small-col-ombud">
                             Yrkat belopp (Kr)
                         </th>
@@ -324,6 +342,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script type="text/javascript">
+    $('#PdfEventOmbud').delay(4000).hide(1500);
+</script>
 <script>
     $(function () {
         $(".js-show-view-btn").click(function (e) {
