--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -15,115 +15,118 @@
     }
 </head>
 <body>
-    @if (User.IsInRole("AdministrativeOfficial"))
+    @if (!Url.Action().ToString().ToLower().Contains("pdf"))   // Pdf document should not contain Navbar
     {
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container no-padding-left">
-                <div class="navbar-header">
-                    <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+        if (User.IsInRole("AdministrativeOfficial"))
+        {
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container no-padding-left">
+                    <div class="navbar-header">
+                        <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="red-bar navbar-collapse collapse">
+                    <div class="red-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
+                        <ul style="padding-left: 4px;">
+                            <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                            <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                            <li>@Html.ActionLink("Handläggare", "NewAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
                 </div>
             </div>
-            <div class="red-bar navbar-collapse collapse">
-                <div class="red-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
-                    <ul style="padding-left: 4px;">
-                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Handläggare", "NewAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+        }
+        else if (User.IsInRole("Ombud"))
+        {
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container no-padding-left">
+                    <div class="navbar-header">
+                        <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="blue-bar navbar-collapse collapse">
+                    <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
+                        <ul style="padding-left:4px;">
+                            <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                            <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                            <li>@Html.ActionLink("Assistenter", "Index", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                            <li>@Html.ActionLink("Ombud", "IndexOmbud", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
+
+                </div>
+            </div>
+        }
+        else if (User.IsInRole("Admin"))
+        {
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container no-padding-left">
+                    <div class="navbar-header">
+                        <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="black-bar navbar-collapse collapse">
+                    <div class="black-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
+                        <ul style="padding-left:0px;">
+                            <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                            <li>@Html.ActionLink("Handläggare", "IndexAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                            <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                            <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                            <li>@Html.ActionLink("Assistenter", "IndexAllCompanies", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                            <li>@Html.ActionLink("Ombud", "IndexAllOmbuds", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
+
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container no-padding-left">
+                    <div class="navbar-header">
+                        <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+                    </div>
+                </div>
+                <div class="blue-bar navbar-collapse collapse">
+                    <div class="blue-bar-filler">
+                    </div>
+                    <ul>
+
+                        @*<li>@Html.ActionLink("Ansökningar", "Index", "Claims", new { @class = "navbar-actionlink li-a-less-padding-left" })</li>*@
+                        @*<li>@Html.ActionLink("Assistenter", "Index", "Assistants", new { @class = "navbar-actionlink" })</li>
+                            <li>@Html.ActionLink("Assistansbolag", "Edit", "OmbudProfiles", new { @class = "navbar-actionlink" })</li>*@
                     </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-            </div>
-        </div>
-    }
-    else if (User.IsInRole("Ombud"))
-    {
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container no-padding-left">
-                <div class="navbar-header">
-                    <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-            </div>
-            <div class="blue-bar navbar-collapse collapse">
-                <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
-                    <ul style="padding-left:4px;">
-                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Assistenter", "Index", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Ombud", "IndexOmbud", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
+                    @*Html.Partial("_LoginPartial")*@
+                    @*</div>*@
 
-            </div>
-        </div>
-    }
-    else if (User.IsInRole("Admin"))
-    {
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container no-padding-left">
-                <div class="navbar-header">
-                    <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
                 </div>
             </div>
-            <div class="black-bar navbar-collapse collapse">
-                <div class="black-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
-                    <ul style="padding-left:0px;">
-                        <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                        <li>@Html.ActionLink("Handläggare", "IndexAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                        <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                        <li>@Html.ActionLink("Assistenter", "IndexAllCompanies", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                        <li>@Html.ActionLink("Ombud", "IndexAllOmbuds", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left-less-padding-right" })</li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-
-            </div>
-        </div>
-    }
-    else
-    {
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container no-padding-left">
-                <div class="navbar-header">
-                    <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
-                </div>
-            </div>
-            <div class="blue-bar navbar-collapse collapse">
-                <div class="blue-bar-filler">
-                </div>
-                <ul>
-
-                    @*<li>@Html.ActionLink("Ansökningar", "Index", "Claims", new { @class = "navbar-actionlink li-a-less-padding-left" })</li>*@
-                    @*<li>@Html.ActionLink("Assistenter", "Index", "Assistants", new { @class = "navbar-actionlink" })</li>
-                        <li>@Html.ActionLink("Assistansbolag", "Edit", "OmbudProfiles", new { @class = "navbar-actionlink" })</li>*@
-                </ul>
-                @*Html.Partial("_LoginPartial")*@
-                @*</div>*@
-
-            </div>
-        </div>
+        }
     }
 
 
